tests/invalid/bug150.err_exp
bug150.m:012: In `car'(in) = out:
bug150.m:012:   error: implicit determinism declaration not satisfied.
bug150.m:012:   Declared `det', inferred `semidet'.
bug150.m:016:   In argument 1 of clause head:
bug150.m:016:   unification of `HeadVar__1' and `list.[H | _T]' can fail.
